--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
         integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>;
     <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/javascript/videoSearch.js"></script>
     <title>Video Search</title>
 </head>
 
 <body>
-
+<button id="search">Search</button>
 </body>
 
 </html>
