--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         should appear</div>
                     <div class="card-body" id="videoGameInfo">
                         This is where our search information should appear including an image of the game itself.
-                        we could also add a button here to search for more info or set that buttoon to the generated
+                        we could also add a button here to search for more info or set that button to the generated
                         image itself.
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                         should appear</div>
                     <div class="card-body" id="videoGameInfo">
                         This is where our search information should appear including an image of the game itself.
-                        we could also add a button here to search for more info or set that buttoon to the generated
+                        we could also add a button here to search for more info or set that button to the generated
                         image itself.
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         should appear</div>
                     <div class="card-body" id="videoGameInfo">
                         This is where our search information should appear including an image of the game itself.
-                        we could also add a button here to search for more info or set that buttoon to the generated
+                        we could also add a button here to search for more info or set that button to the generated
                         image itself.
                     </div>
                 </div>
