Added card deck id to html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 
         <div class="container">
             <div class="row">
-                <div class="card-deck">
+                <!--added an id class here to match the tiny difference from the card html file-->
+                <div class="card-deck" id="card-deck">
                     <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-4">
                         <div class="card-header" id="videoGameTitle">This is where the search result of the game title
                             should appear</div>
