--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                                     value="everyone">Everyone</button>
                                 <button id="teen" class="dropdown-item" type="button" value="teen">Teen</button>
                                 <button id="mature" class="dropdown-item" type="button" value="mature">Mature</button>
-                                <button id="adult" class="dropdown-item" type="button" value="adult-only">Adult
-                                    Only</button>
+                                <button id="adult" class="dropdown-item" type="button" value="adult-only">Adult</button>
                             </div>
                         </div>
 
