age verification plug-in working
html and script commented out,
missing <link> put in bootstrap(probably source of ;) /html added at bottom of index page. all plug-in files should be in assets Html5 folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!--Is this the Bootstrap we need???-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></link>
+    <!-- This is css for the age verification pop-up/plug-in-->
+    <link rel="stylesheet" href="assets/Html5-sessionStorage-Based-Age-Verification-with-jQuery-Age-Check/dist/agecheck.min.css"></link>
     <!--Firebase call starts here-->
     <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
@@ -33,6 +35,8 @@
     <script src="assets/javascript/giphyButtons.js"></script>
         <!--link to our js page-->
     <script src="assets/javascript/videoSearch.js"></script>
+    <!-- link to js for pop-up age verification plug-in-->
+    <script src="assets/Html5-sessionStorage-Based-Age-Verification-with-jQuery-Age-Check/dist/jquery.agecheck-min.js"></script>
     <title>Video Search</title>
 </head>
 
@@ -168,3 +172,4 @@
     </div>
 
 </body>
+</html>
