--- a/index.html
+++ b/index.html
@@ -43,122 +43,122 @@
 
 
     <div id="mainShell">
-    <header id="headBar" class="container">
-        <div class="row">
-            <div class="jumbotron mainBox bg-secondary text-white m-3 p-2 col col-lg-12 text-center ">
-                <div>
-                    <h1> Videogame Search Engine</h1>
-                    <h3>Use the drop-down menu choices to get a game recommendation</h3>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <main>
-        <section id="gif">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
-                    <div class="card-body m-3 p-1">
-                        <p>This is where the console gif should appear.</p>
-                        <div id="age-gifs-appear-here"></div>
-                        <div id="platform-gifs-appear-here"></div>
-                        <div id="genre-gifs-appear-here"></div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        </section>
-
-        <section id="menu">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="card bg-secondary border-danger m-3 p-1 col col-lg-10" id="placeholderForDropDownMenu">
-                    <div class="card-header text-white"> Here is where the drop down menu buttons will appear</div>
-                    <div class="card-body text-white">
-                        <div class="btn-group">
-                            <button id="ageRange" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                For Age Ranges
-                            </button>
-                            <div class="dropdown-menu">
-                                <button id="everyone" class="dropdown-item" type="button"
-                                    value="everyone">Everyone</button>
-                                <button id="teen" class="dropdown-item" type="button" value="teen">Teen</button>
-                                <button id="mature" class="dropdown-item" type="button" value="mature">Mature</button>
-                                <button id="adult" class="dropdown-item" type="button" value="adult-only">Adult
-                                    Only</button>
-                            </div>
-                        </div>
-
-                        <div class="btn-group">
-                            <button id="platform" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Platform
-                            </button>
-                            <div class="dropdown-menu">
-                                <button id="pc" class="dropdown-item" type="button">PC</button>
-                                <button id="nintendoSwitch" class="dropdown-item" type="button"
-                                    value="nintendo-switch">Nintendo Switch</button>
-                                <button id="playstation4" class="dropdown-item" type="button"
-                                    value="playstation4">Playstation 4</button>
-                                <button id="xboxOne" class="dropdown-item" type="button" value="xbox-one">Xbox
-                                    One</button>
-                            </div>
-                        </div>
-
-                        <div class="btn-group">
-                            <button id="genre" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Genres
-                            </button>
-                            <div class="dropdown-menu" id="genreValue">
-                                <button id="fighting" class="dropdown-item" type="button"
-                                    value="fighting">Fighting</button>
-                                <button id="puzzles" class="dropdown-item" type="button"
-                                    value="puzzles">Puzzles</button>
-                                <button id="rolePlaying" class="dropdown-item" type="button" value="role-playing">Role
-                                    Playing</button>
-                                <button id="sport" class="dropdown-item" type="button" value="sport">Sport</button>
-                                <button id="adventure" class="dropdown-item" type="button"
-                                    value="adventure">Adventure</button>
-                                <button id="arcade" class="dropdown-item" type="button" value="arcade">Arcade</button>
-                            </div>
-                        </div>
-                        <button id="search" class="text-white bg-secondary border-danger m-3 p-1">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </section>
-
-        <section id="cards">
-
-        <div class="container">
+        <header id="headBar" class="container">
             <div class="row">
-                <!--added an id class here to match the tiny difference from the card html file-->
-                <div class="card-columns" id="card-deck">
-                    <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-4">
-                        <div class="card-header" id="videoGameTitle">This is where the search result of the game title
-                            should appear</div>
-                        <div class="card-body" id="videoGameInfo">
-                            This is where our search information should appear including an image of the game itself.
-                            we could also add a button here to search for more info or set that button to the generated
-                            image itself.
-                        </div>
+                <div class="jumbotron mainBox bg-secondary text-white m-3 p-2 col col-lg-12 text-center ">
+                    <div>
+                        <h1> Videogame Search Engine</h1>
+                        <h3>Use the drop-down menu choices to get a game recommendation</h3>
                     </div>
-
-                
-
                 </div>
             </div>
-        </div>
+        </header>
+
+        <main>
+            <section id="gif" class="container">
+
+                <div class="row justify-content-center">
+                    <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
+                        <div class="card-body m-3 p-1">
+                            <p>This is where the console gif should appear.</p>
+                            <div id="age-gifs-appear-here"></div>
+                            <div id="platform-gifs-appear-here"></div>
+                            <div id="genre-gifs-appear-here"></div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </section>
+
+            <section id="menu" class="container">
+                <div class="row justify-content-center">
+                    <div class="card bg-secondary border-danger m-3 p-1 col col-lg-10" id="placeholderForDropDownMenu">
+                        <div class="card-header text-white"> Here is where the drop down menu buttons will appear</div>
+                        <div class="card-body text-white">
+                            <div class="btn-group">
+                                <button id="ageRange" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    For Age Ranges
+                                </button>
+                                <div class="dropdown-menu">
+                                    <button id="everyone" class="dropdown-item" type="button"
+                                        value="everyone">Everyone</button>
+                                    <button id="teen" class="dropdown-item" type="button" value="teen">Teen</button>
+                                    <button id="mature" class="dropdown-item" type="button"
+                                        value="mature">Mature</button>
+                                    <button id="adult" class="dropdown-item" type="button" value="adult-only">Adult
+                                        Only</button>
+                                </div>
+                            </div>
+
+                            <div class="btn-group">
+                                <button id="platform" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Platform
+                                </button>
+                                <div class="dropdown-menu">
+                                    <button id="pc" class="dropdown-item" type="button">PC</button>
+                                    <button id="nintendoSwitch" class="dropdown-item" type="button"
+                                        value="nintendo-switch">Nintendo Switch</button>
+                                    <button id="playstation4" class="dropdown-item" type="button"
+                                        value="playstation4">Playstation 4</button>
+                                    <button id="xboxOne" class="dropdown-item" type="button" value="xbox-one">Xbox
+                                        One</button>
+                                </div>
+                            </div>
+
+                            <div class="btn-group">
+                                <button id="genre" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Genres
+                                </button>
+                                <div class="dropdown-menu" id="genreValue">
+                                    <button id="fighting" class="dropdown-item" type="button"
+                                        value="fighting">Fighting</button>
+                                    <button id="puzzles" class="dropdown-item" type="button"
+                                        value="puzzles">Puzzles</button>
+                                    <button id="rolePlaying" class="dropdown-item" type="button"
+                                        value="role-playing">Role
+                                        Playing</button>
+                                    <button id="sport" class="dropdown-item" type="button" value="sport">Sport</button>
+                                    <button id="adventure" class="dropdown-item" type="button"
+                                        value="adventure">Adventure</button>
+                                    <button id="arcade" class="dropdown-item" type="button"
+                                        value="arcade">Arcade</button>
+                                </div>
+                            </div>
+                            <button id="search" class="text-white bg-secondary border-danger m-3 p-1">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="cards" class="container">
+                <div class="row">
+                    <!--added an id class here to match the tiny difference from the card html file-->
+                    <div class="card-columns" id="card-deck">
+                        <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-4">
+                            <div class="card-header" id="videoGameTitle">This is where the search result of the game
+                                title
+                                should appear</div>
+                            <div class="card-body" id="videoGameInfo">
+                                This is where our search information should appear including an image of the game
+                                itself.
+                                we could also add a button here to search for more info or set that button to the
+                                generated
+                                image itself.
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
 
 
 
-    </main>
-</div>
+        </main>
+    </div>
 </body>
 
 </html>
