Card sizing generally fixed

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="row">
                     <!--added an id class here to match the tiny difference from the card html file-->
                     <div class="card-columns" id="card-deck">
-                        <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-4">
+                        <!-- <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-4">
                             <div class="card-header" id="videoGameTitle">This is where the search result of the game
                                 title
                                 should appear</div>
@@ -149,7 +149,7 @@
                                 generated
                                 image itself.
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
