need to merge so buttons work

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
         <div class="container">
             <div class="row justify-content-center">
+                <div class="card-deck">
                 <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
                     <div class="card-body m-3 p-1">
                         <p>This is where the console gif should appear.</p>
@@ -62,6 +63,7 @@
                     </div>
 
                 </div>
+            </div>
             </div>
         </div>
 
@@ -91,7 +93,7 @@
                                 Platform
                             </button>
                             <div class="dropdown-menu">
-                                <button id="pc" class="dropdown-item" type="button">PC</button>
+                                <button id="pc" class="dropdown-item" type="button" value="pc">PC</button>
                                 <button id="nintendoSwitch" class="dropdown-item" type="button"
                                     value="nintendo-switch">Nintendo Switch</button>
                                 <button id="playstation4" class="dropdown-item" type="button"
