fixed missing semicolon

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--Please anyone who knows which scripts are needed comment in a name for them-->
     <!--Css Reset Page-->
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css"></link>
     <!--link to sassy generated css page-->
 
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css"></link>
     <!--Is this the Bootstrap we need???-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></link>
@@ -20,8 +20,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <!--JQuery call-->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
-        integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>;
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
     <!--below this line we had a conflict merge and there may be an excess bootstrap call-->
     <!--Axios Call-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
