--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="card-deck">
-                <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
-                    <div class="card-body m-3 p-1">
+                
+            <!--  <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
+                    <div class="card-body m-3 p-1"> -->
+                        <div class="card-deck"></div>
                         <p>This is where the console gif should appear.</p>
-                        <div id="age-gifs-appear-here"></div>
-                        <div id="platform-gifs-appear-here"></div>
-                        <div id="genre-gifs-appear-here"></div>
+                        <div id="gifs-appear-here" class="card" ></div>
+                        </div>
                     </div>
 
                 </div>
-            </div>
+            
             </div>
         </div>
 
