--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--Please anyone who knows which scripts are needed comment in a name for them-->
     <!--Css Reset Page-->
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css"></link>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!--link to sassy generated css page-->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css"></link>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css">
     <!--Is this the Bootstrap we need???-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></link>
@@ -19,7 +20,8 @@
     <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <!--JQuery call-->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>;
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
+        integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>;
     <!--below this line we had a conflict merge and there may be an excess bootstrap call-->
     <!--Axios Call-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -44,10 +46,6 @@
 <body>
 
 
-   
-<body>
-
-
     <div id="mainShell">
         <header id="headBar" class="container">
             <div class="row">
@@ -58,60 +56,61 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </div>
 
-        <main>
-            <section id="gif" class="container">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="card-deck">
+                <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
+                    <div class="card-body m-3 p-1">
+                        <p>This is where the console gif should appear.</p>
+                        <div id="age-gifs-appear-here"></div>
+                        <div id="platform-gifs-appear-here"></div>
+                        <div id="genre-gifs-appear-here"></div>
+                    </div>
 
-                <div class="row justify-content-center">
-                    <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
-                        <div class="card-body m-3 p-1">
-                            <p>This is where the console gif should appear.</p>
-                            <div id="age-gifs-appear-here"></div>
-                            <div id="platform-gifs-appear-here"></div>
-                            <div id="genre-gifs-appear-here"></div>
-                        </div>
 
                     </div>
                 </div>
+            </div>
+            </div>
+        </div>
 
-            </section>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="card bg-secondary border-danger m-3 p-1 col col-lg-10" id="placeholderForDropDownMenu">
+                    <div class="card-header text-white"> Here is where the drop down menu buttons will appear</div>
+                    <div class="card-body text-white">
+                        <div class="btn-group">
+                            <button id="ageRange" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                For Age Ranges
+                            </button>
+                            <div class="dropdown-menu">
+                                <button id="everyone" class="dropdown-item" type="button"
+                                    value="everyone">Everyone</button>
+                                <button id="teen" class="dropdown-item" type="button" value="teen">Teen</button>
+                                <button id="mature" class="dropdown-item" type="button" value="mature">Mature</button>
+                                <button id="adult" class="dropdown-item" type="button" value="adult-only">Adult
+                                    Only</button>
 
-            <section id="menu" class="container">
-                <div class="row justify-content-center">
-                    <div class="card bg-secondary border-danger m-3 p-1 col col-lg-10" id="placeholderForDropDownMenu">
-                        <div class="card-header text-white"> Here is where the drop down menu buttons will appear</div>
-                        <div class="card-body text-white">
-                            <div class="btn-group">
-                                <button id="ageRange" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    For Age Ranges
-                                </button>
-                                <div class="dropdown-menu">
-                                    <button id="everyone" class="dropdown-item" type="button"
-                                        value="everyone">Everyone</button>
-                                    <button id="teen" class="dropdown-item" type="button" value="teen">Teen</button>
-                                    <button id="mature" class="dropdown-item" type="button"
-                                        value="mature">Mature</button>
-                                    <button id="adult" class="dropdown-item" type="button" value="adult-only">Adult
-                                        Only</button>
-                                </div>
                             </div>
 
-                            <div class="btn-group">
-                                <button id="platform" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Platform
-                                </button>
-                                <div class="dropdown-menu">
-                                    <button id="pc" class="dropdown-item" type="button">PC</button>
-                                    <button id="nintendoSwitch" class="dropdown-item" type="button"
-                                        value="nintendo-switch">Nintendo Switch</button>
-                                    <button id="playstation4" class="dropdown-item" type="button"
-                                        value="playstation4">Playstation 4</button>
-                                    <button id="xboxOne" class="dropdown-item" type="button" value="xbox-one">Xbox
-                                        One</button>
-                                </div>
+
+                        <div class="btn-group">
+                            <button id="platform" class="btn btn-secondary btn-lg dropdown-toggle" type="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Platform
+                            </button>
+                            <div class="dropdown-menu">
+                                <button id="pc" class="dropdown-item" type="button" value="pc">PC</button>
+                                <button id="nintendoSwitch" class="dropdown-item" type="button"
+                                    value="nintendo-switch">Nintendo Switch</button>
+                                <button id="playstation4" class="dropdown-item" type="button"
+                                    value="playstation4">Playstation 4</button>
+                                <button id="xboxOne" class="dropdown-item" type="button" value="xbox-one">Xbox
+                                    One</button>
+
                             </div>
 
                             <div class="btn-group">
