--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row justify-content-center">
+      <!--  <div class="container">
+            <div class="row">
                 
-            <!--  <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
-                    <div class="card-body m-3 p-1"> -->
+              <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9" id="placeholderForGif">
+                    <div class="card-body m-3 p-1">
                         <div class="card-deck"></div>
-                        <p>This is where the console gif should appear.</p>
-                        <div id="gifs-appear-here" class="card" ></div>
-                        </div>
+                        <p>This is where the console gif should appear.</p>-->
+                        <div id="gifs-appear-here" class="card-deck" ></div>
+                    <!--    </div>
                     </div>
 
                 </div>
             
             </div>
-        </div>
+        </div> -->
 
         <div class="container">
             <div class="row justify-content-center">
