--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 
         <section id="gif" class="container">
             <div class="container">
-                <div class="row justify-content-center">
-                    <div class="card-deck">
+                <div class="row center">
+                        <div id="gifs-appear-here" class="card-deck" ></div>
+                    <!-- <div class="card-deck">
                         <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9"
                             id="placeholderForGif">
                             <div class="card-body m-3 p-1">
@@ -80,7 +81,7 @@
 
 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
