--- a/index.html
+++ b/index.html
@@ -67,21 +67,19 @@
 
         <section id="gif" class="container">
             <div class="container">
-                <div class="row center">
-                        <div id="gifs-appear-here" class="card-deck" ></div>
-                    <!-- <div class="card-deck">
-                        <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9"
-                            id="placeholderForGif">
+                <div class="row justify-center">
+                        
+                    <div class="card-deck">
+                        <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9">
                             <div class="card-body m-3 p-1">
                                 <p>Here's a gif showing what your searching for!</p>
-                                <div id="age-gifs-appear-here"></div>
-                                <div id="platform-gifs-appear-here"></div>
-                                <div id="genre-gifs-appear-here"></div>
+                                <div id="gifs-appear-here"></div>
+
                             </div>
 
 
                         </div>
-                    </div> -->
+                   </div> 
                 </div>
             </div>
         </section>
