Spelling error fix

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="jumbotron mainBox bg-secondary text-white m-3 p-2 col col-lg-12 text-center ">
                         <div>
                             <h1> Videogame Search Engine</h1>
-                            <h3> Use this site to get a customized video game reccomendation</h3>
+                            <h3> Use this site to get a customized video game recomendation</h3>
                         </div>
             </header>
         </section>
