--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
         <section id="gif" class="container">
             <div class="container">
                 <div class="row justify-center">
-                        
-                    <div class="card-deck">
-                        <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9">
+        
+                        <div class="card bg-secondary col-lg-12 border-danger text-white m-3 p-1 col col-lg-9">
                             <div class="card-body m-3 p-1">
                                 <p>Here's a gif showing what your searching for!</p>
                                 <div id="gifs-appear-here"></div>
@@ -79,7 +78,6 @@
 
 
                         </div>
-                   </div> 
                 </div>
             </div>
         </section>
