--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
     <section id="gif" class="container">
         <div class="container">
-            <div class="row justify-center">
-                <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9">
+            <div class="row">
+                <div class="card bg-secondary border-danger text-white m-3 p-1 col-lg-11">
                     <div class="card-body m-3 p-1">
                         <p>Here's a gif showing what your searching for!</p>
                         <div id="gifs-appear-here"></div>
