--- a/index.html
+++ b/index.html
@@ -67,19 +67,20 @@
 
         <section id="gif" class="container">
             <div class="container">
-                <div class="row justify-center">
-                        
+                <div class="row justify-content-center">
                     <div class="card-deck">
-                        <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9">
+                        <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9"
+                            id="placeholderForGif">
                             <div class="card-body m-3 p-1">
                                 <p>Here's a gif showing what your searching for!</p>
-                                <div id="gifs-appear-here"></div>
-
+                                <div id="age-gifs-appear-here"></div>
+                                <div id="platform-gifs-appear-here"></div>
+                                <div id="genre-gifs-appear-here"></div>
                             </div>
 
 
                         </div>
-                   </div> 
+                    </div>
                 </div>
             </div>
         </section>
