--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- link to js for pop-up age verification plug-in-->
     <script
         src="assets/Html5-sessionStorage-Based-Age-Verification-with-jQuery-Age-Check/dist/jquery.agecheck-min.js"></script>
-    <title>Video Search</title>
+    <title>Video Game Search</title>
 </head>
 
 <body>
@@ -155,7 +155,7 @@
                                             value="arcade">Arcade</button>
                                     </div>
                                     <button id="search"
-                                        class="text-white bg-secondary border-danger m-3 p-1">Search</button>
+                                            class="text-white bg-secondary border-danger m-3 p-1">Search</button>
                                 </div>
                             </div>
                         </div>
