--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9"
                             id="placeholderForGif">
                             <div class="card-body m-3 p-1">
-                                <p>Here's a gif showing what your searching for!</p>
+                                <p>Click to play a gif showing what your searching for!</p>
                                 <div id="gifs-appear-here"></div>
                             </div>
                         </div>
