--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
         <section id="cards" class="container">
             <div class="row">
-                <div class="col col-lg-12 col-md-9 col-sm-6">
+                <div class="col">
                     <!--added an id class here to match the tiny difference from the card html file-->
                     <div class="card-columns" id="card-deck">
                     </div>
